Fix packet inventory flicker on clean zMenu base